--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,13 @@
 
 .text-box{
   width:70%;
-  margin:auto;
+  margin:0 auto 7% auto;
+}
+
+.text-box p{
+  line-height: 1.3;
+  font-weight:300;
+  letter-spacing: 1px;
 }
 
 .top-spacer{
